# monkey-bot

./: .dockerignore  .env.example  .gcloudignore  CLOUD_SCHEDULER_MIGRATION.md  Dockerfile  README.md  ROLLOUT_GUIDE.md  SCHEDULER_SETUP.md  SECRETS.md  cloudbuild.yaml  deploy.sh  pyproject.toml  pytest.ini  requirements.txt  setup-scheduler.sh
.cursor/skills/: auriga-design-system  generate-agent-eval  monkeymode  write-blog-post
.monkeymode/core-agent-foundation/: PARALLEL_WORK_FIXES.md  STORY-2-IMPLEMENTATION-SUMMARY.md  qa-log.md  review-user_stories.md  state.json  user_stories.md
.monkeymode/marketing-campaign-manager/: CODE_SPECS_SUMMARY.md  qa-log.md  state.json  user_stories.md
config/: __init__.py  settings.py
docs/: OpenClaw_Implementation_Guide.md  deployment.md  mcp-research.md
docs/phases/: README.md  phase-1-core-foundation.md  phase-2-marketing-campaign.md  phase-3-cloud-deployment.md  phase-4-production-hardening.md  phase-5-advanced-features.md
docs/preplanning/: base-agent-abilities.md  integrate-skills-mcp.md
docs/ref/: 01_gateway_daemon.md  02_telegram_integration.md  03_memory_system.md  04_cron_scheduler.md  05_skills_system.md  06_llm_integration.md  07_terminal_executor.md  08_goose_extension_architecture.md  09_goose_error_recovery.md  10_goose_multi_model_routing.md  11_goose_recipe_workflows.md  12_goose_session_management.md  13_goose_permission_security.md  14_goose_observability.md
examples/: README.md
scripts/: __init__.py  collect_metrics.py  generate_report.py
skills/analyze-competitor/: SKILL.md  __init__.py  analyze_competitor.py
skills/create-campaign/: SKILL.md  __init__.py  create_campaign.py  create_post_ideas.md  define_strategy.md  generate_calendar.md  research_topic.md
skills/file-ops/: SKILL.md  file_ops.py
skills/generate-post/: SKILL.md  __init__.py  generate_post.py  platforms.py
skills/identify-trends/: SKILL.md  __init__.py  identify_trends.py
skills/memory/: SKILL.md  memory.py
skills/post-content/: SKILL.md  __init__.py  post_content.py
skills/request-approval/: SKILL.md  __init__.py  request_approval.py
skills/schedule-campaign/: SKILL.md  __init__.py  schedule_campaign.py
skills/search-web/: SKILL.md  __init__.py  search_web.py
src/: __init__.py  main.py
src/backends/: __init__.py  base.py  gcs.py
src/core/: __init__.py  agent.py  config.py  deepagent.py  filesystem_sync.py  firestore_checkpointer.py  interfaces.py  llm_client.py  memory.py  middleware.py  mocks.py  prompt.py  store.py  terminal.py
src/gateway/: __init__.py  interfaces.py  main.py  mocks.py  models.py  pii_filter.py  server.py
src/sandbox/: __init__.py  modal.py
src/skills/: __init__.py  executor.py  loader.py
src/voice/: __init__.py  handler.py
tests/: __init__.py
tests/backends/: __init__.py  test_base.py  test_gcs.py
tests/core/: __init__.py  test_agent.py  test_config_extensions.py  test_cron_scheduler.py  test_deepagent.py  test_deepagent_file_loading.py  test_firestore_checkpointer.py  test_integration.py  test_llm_client.py  test_prompt.py  test_prompt_layer0.py  test_terminal.py
tests/gateway/: __init__.py  test_models.py  test_pii_filter.py  test_server.py  test_voice_endpoint.py
tests/integration/: __init__.py  test_e2e.py  (+5 more)
(+61 files in other folders)
